# rigetti-resource-estimation

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: install-poetry.sh  tests.yaml
docs/: .gitignore
docs/source/: .gitignore  conf.py  index.rst
examples/: .gitignore  demo.ipynb  widgetization_example.py
examples/input/: qft10.qasm  qft4-decomposed3.json  qft4.qasm  qft4_random_reps_W1_all0init_cabalizeframes.json  qft4_random_reps_W2_all0init_cabalizeframes.json
scripts/: build-docs.sh  run-examples.sh  test-examples.sh  test-package.sh
src/rigetti_resource_estimation/: __init__.py  analysis.py  cabaliser_wrapper.py  decomposers.py  estimate_from_graph.py  estimation_pipeline.py  graph_utils.py  gs_equivalence.py  hardware_components.py  jabalizer_wrapper.jl  jabalizer_wrapper.py  more_utils.py  params.yaml  resources.py  translators.py  transpile.py  widgetization.py
tests/: test_analysis.py  test_cabaliser_wrapper.py  test_decomposers.py  test_estimate_from_graph.py  test_estimation_pipeline.py  test_graph_utils.py  test_gs_equivalence.py  test_hardware_components.py  test_init.py  test_more_utils.py  test_translators.py  test_transpile.py  test_widgetization.py
tests/input/: qft10-decomposed3.json  qft4_all0init_jabalizeframes.json
tests/verify_n_validate/: test_robust_verification_jabalizer.py  test_unitary_verif_cabaliser.py  test_validate_rre.py  test_verify_rre.py
